🎨 style(Layout.js): remove id attribute from main tag 🎨 style(Layout.module.scss): remove dark mode styles from Layout.module.scss 🐛 fix([...slug].js): add check for front page to avoid rendering h1 tag 🎨 style(_darkmode.scss): add dark mode styles for body tag
🚀 chore(index.scss): add darkmode module to base styles

--- a/src/components/common/Layout.module.scss
+++ b/src/components/common/Layout.module.scss
@@ -1,9 +1,5 @@
 @use "tokens";
 
-body.dark {
-  background-color: #0b0c10; // Note: AO confirm if there will be a dark mode
-}
-
 .main-container {
   display: flex;
   padding-right: tokens.$rightOffset;
